fix flexbox alignment in footer

--- a/src/components/css/rootpage.css
+++ b/src/components/css/rootpage.css
@@ -28,7 +28,7 @@
   line-height: 1.6
 }
 
-.feature h3 {
+.feature h2 {
   font-size: 22px;
   padding-bottom: 10px;
   color: rgb(27, 27, 27)
@@ -49,22 +49,26 @@
   background-color: #3b4141;
   color: white;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: space-between;
   margin-top: 10px;
   padding: 25px 0px;
   width: 100%;
 }
 
-.footer h4 {
+.footer h3 {
   border-bottom: 1px solid white;
   font-weight: bold;
-  padding-bottom: 5px;
-  margin-bottom: 5px;
+  flex: 1;
 }
 
 .footer a:hover {
   color: #7bc087;
   font-weight: bold;
+}
+
+.footer-credits {
+  flex: 1;
 }
 
 .footer-credits li {
@@ -78,11 +82,13 @@
 }
 
 .github-container {
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
 
 .github-link {
+  flex: 1;
   color: white;
   text-decoration: none;
   padding: 7px 0px;
